--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "child_process": "^1.0.2",
     "express": "^4.16.2",
     "express-chrome-logger": "^0.1.5",
+    "jsonfile": "^4.0.0",
     "multer": "^1.3.0",
     "node-webhooks": "^1.3.0",
     "request": "^2.83.0"
